--- a/local/ansible/deploy_jenkins/deploy_jenkins.yml
+++ b/local/ansible/deploy_jenkins/deploy_jenkins.yml
@@ -4,7 +4,7 @@
   become: yes # To run commands as a superuser (e.g., sudo)
   vars:
     default_container_name: jenkins
-    default_container_image: fullstackdatascience/jenkins:lts
+    default_container_image: quandvrobusto/jenkins:lts-jdk17
   tasks:
     - name: Install aptitude
       apt:
