--- a/local/ansible/deploy_jenkins/deploy_jenkins.yml
+++ b/local/ansible/deploy_jenkins/deploy_jenkins.yml
@@ -4,7 +4,7 @@
   become: yes # To run commands as a superuser (e.g., sudo)
   vars:
     default_container_name: jenkins
-    default_container_image: quandvrobusto/jenkins:lts-jdk17
+    default_container_image: b21dccn222/jenkins:2.479.3-lts
   tasks:
     - name: Install aptitude
       apt:
