--- a/app_chart/Chart.yaml
+++ b/app_chart/Chart.yaml
@@ -14,5 +14,5 @@ version: 0.1.0
 appVersion: "1.0.0"
 
 maintainers:
-  - email: tiennguyenkha2001@gmail.com
-    name: tiennk
+  - email: dattqyl09@gmail.com
+    name: b21dccn222
