mong la the last

--- a/app_chart/templates/nginx-ingress.yaml
+++ b/app_chart/templates/nginx-ingress.yaml
@@ -3,32 +3,38 @@ kind: Ingress
 metadata:
   name: {{ .Release.Name }}-nginx-ingress
   namespace: model-serving
-  # https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#controller_summary
   annotations:
-    kubernetes.io/ingress.class: "nginx" # which can be replaced by gce, gce-internal or istio
+    kubernetes.io/ingress.class: "nginx"
+    # Dòng này hướng dẫn Nginx Ingress Controller loại bỏ tiền tố đường dẫn /diabetes
+    # trước khi gửi yêu cầu đến service.
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
   - host: tiennkapp.org.m1
     http:
       paths:
+      # Sửa đường dẫn để khớp với URL đầy đủ
       - path: /diabetes/docs
         pathType: Prefix
         backend:
           service:
             name: {{ .Release.Name }}
+            # Sửa port thành 8000 để khớp với ứng dụng FastAPI
             port:
-              number: 30000
+              number: 8000
       - path: /diabetes/openapi.json
         pathType: ImplementationSpecific
         backend:
           service:
             name: {{ .Release.Name }}
+            # Sửa port thành 8000
             port:
-              number: 30000
+              number: 8000
       - path: /diabetes/preloaded_xgb
         pathType: Prefix
         backend:
           service:
             name: {{ .Release.Name }}
+            # Sửa port thành 8000
             port:
-              number: 30000
+              number: 8000
