--- a/app_chart/templates/service.yaml
+++ b/app_chart/templates/service.yaml
@@ -9,10 +9,10 @@ spec:
   selector:
     app: {{ .Release.Name }}
   ports:
-    - port: 80  # Cổng mà Service lắng nghe
+    - port: 30000
       name: appport
       protocol: TCP
-      targetPort: 8000 # Cổng mà ứng dụng FastAPI chạy bên trong container
+      targetPort: 30000
     - port: 8099
       name: metricsport
       protocol: TCP
