--- a/app_chart/templates/nginx-ingress.yaml
+++ b/app_chart/templates/nginx-ingress.yaml
@@ -5,30 +5,33 @@ metadata:
   namespace: model-serving
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    # Dòng này chỉ thị cho Nginx Ingress Controller loại bỏ tiền tố đường dẫn
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
   - host: tiennkapp.org.m1
     http:
       paths:
-      - path: /diabetes/(.*)  # Sửa lại thành regex để rewrite
+      # Sử dụng đường dẫn /diabetes với pathType Prefix
+      - path: /diabetes
         pathType: Prefix
         backend:
           service:
             name: {{ .Release.Name }}
+            # Sửa port thành 30000 để khớp với Service
             port:
-              number: 30000 # Sửa port thành 30000 để khớp với Service
+              number: 30000
       - path: /diabetes/openapi.json
         pathType: ImplementationSpecific
         backend:
           service:
             name: {{ .Release.Name }}
             port:
-              number: 30000 # Sửa port thành 30000
+              number: 30000
       - path: /diabetes/preloaded_xgb
         pathType: Prefix
         backend:
           service:
             name: {{ .Release.Name }}
             port:
-              number: 30000 # Sửa port thành 30000
+              number: 30000
